atv-quote-shipping/force-app/main/default/objects/ATV_NTS_Direccion_de_Envio__c/ATV_NTS_Direccion_de_Envio__c.object-meta.xml
<CustomObject>
    <label>Dirección de envío</label>
    <nameField>
        <label>Dirección de envío</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Direcciones de envío</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>