atv-quote-shipping/force-app/main/default/objects/ATV_NTS_Direccion_de_Envio__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Direcciones de envío</relationshipLabel>
    <relationshipName>Direcciones_de_envio</relationshipName>
    <type>Lookup</type>
</CustomField>