atv-quote-shipping/force-app/main/default/objects/ATV_NTS_Direccion_de_Envio__c/fields/ATV_fld_ShippingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ATV_fld_ShippingPostalCode__c</fullName>
    <label>Shipping Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>