atv-quote-shipping/force-app/main/default/objects/ATV_NTS_Direccion_de_Envio__c/fields/ATV_NTS_Localidad__c.field-meta.xml
<CustomField>
    <fullName>ATV_NTS_Localidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Localidad</label>
    <referenceTo>ATV_NTS_Localidades__c</referenceTo>
    <relationshipLabel>Direcciones de envío</relationshipLabel>
    <relationshipName>Direcciones_de_env_o</relationshipName>
    <type>Lookup</type>
</CustomField>