atv-quote-shipping/force-app/main/default/objects/ATV_NTS_Direccion_de_Envio__c/fields/ATV_NTS_Provincia__c.field-meta.xml
<CustomField>
    <fullName>ATV_NTS_Provincia__c</fullName>
    <label>Provincia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Buenos Aires</fullName>
            </value>
            <value>
                <fullName>Capital Federal</fullName>
            </value>
            <value>
                <fullName>Catamarca</fullName>
            </value>
            <value>
                <fullName>Chaco</fullName>
            </value>
            <value>
                <fullName>Chubut</fullName>
            </value>
            <value>
                <fullName>Cordoba</fullName>
            </value>
            <value>
                <fullName>Corrientes</fullName>
            </value>
            <value>
                <fullName>Entre Rios</fullName>
            </value>
            <value>
                <fullName>Formosa</fullName>
            </value>
            <value>
                <fullName>Jujuy</fullName>
            </value>
            <value>
                <fullName>La Pampa</fullName>
            </value>
            <value>
                <fullName>La Rioja</fullName>
            </value>
            <value>
                <fullName>Mendoza</fullName>
            </value>
            <value>
                <fullName>Misiones</fullName>
            </value>
            <value>
                <fullName>Neuquen</fullName>
            </value>
            <value>
                <fullName>Rio Negro</fullName>
            </value>
            <value>
                <fullName>Salta</fullName>
            </value>
            <value>
                <fullName>San Juan</fullName>
            </value>
            <value>
                <fullName>San Luis</fullName>
            </value>
            <value>
                <fullName>Santa Cruz</fullName>
            </value>
            <value>
                <fullName>Santa Fe</fullName>
            </value>
            <value>
                <fullName>Santiago del Estero</fullName>
            </value>
            <value>
                <fullName>Tierra del Fuego</fullName>
            </value>
            <value>
                <fullName>Tucuman</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>