atv-quote-shipping/force-app/main/default/objects/ATV_NTS_Direccion_de_Envio__c/fields/Estado_o_Provincia__c.field-meta.xml
<CustomField>
    <fullName>Estado_o_Provincia__c</fullName>
    <label>Estado o Provincia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>