atv-quote-shipping/force-app/main/default/objects/ATV_NTS_Direccion_de_Envio__c/fields/NTS_fld_ShippingCity__c.field-meta.xml
<CustomField>
    <fullName>NTS_fld_ShippingCity__c</fullName>
    <label>Shipping City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>